syntax = "proto3";
package saonetwork.sao.did;

option go_package = "github.com/SaoNetwork/sao/x/did/types";

message PubKey {
  
  string name = 1; 
  string value = 2; 
}
